--- a/react/helloWorld.html
+++ b/react/helloWorld.html
@@ -3,10 +3,12 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>First Component</title>
+    <link rel="stylesheet"
+          href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" />
     <script src="http://fb.me/react-0.8.0.js"></script>
     <script src="http://fb.me/JSXTransformer-0.8.0.js"></script>
 </head>
 <body>
-<script type="text/jsx" src="myReact.js" />
+<script type="text/jsx" src="childProperties.js" />
 </body>
 </html>
