playing with mixins with react.

--- a/react/mounting.html
+++ b/react/mounting.html
@@ -14,7 +14,10 @@
     </style>
 </head>
 <body>
-    <div id="app"></div>
-    <script type="text/jsx" src="mixins.jsx" />
+    <button onclick="render()">Render</button>
+    <button onclick="unmount()">Unmount</button>
+    <hr/>
+    <div id="panel"></div>
+    <script type="text/jsx" src="mounting.jsx" />
 </body>
 </html>
