playing around with composable components

--- a/react/basic.html
+++ b/react/basic.html
@@ -15,6 +15,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/jsx" src="mixins.jsx" />
+    <script type="text/jsx" src="composableComponents.jsx" />
 </body>
 </html>
