clean up so that more code is in the html

--- a/react/basic.html
+++ b/react/basic.html
@@ -15,6 +15,13 @@
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/jsx" src="composableComponents.jsx" />
+    <script type="text/jsx" src="ComposableComponents.js"></script>
+    <script type="text/jsx">
+        /*** @jsx React.DOM */
+        React.renderComponent(
+            <ComposableComponents />,
+            document.getElementById('app')
+        )
+    </script>
 </body>
 </html>
