my first dive into Dynamically Generated Components

--- a/react/basic.html
+++ b/react/basic.html
@@ -15,11 +15,11 @@
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/jsx" src="ComposableComponents.js"></script>
+    <script type="text/jsx" src="PersonTable.js"></script>
     <script type="text/jsx">
         /*** @jsx React.DOM */
         React.renderComponent(
-            <ComposableComponents />,
+            <PersonTable />,
             document.getElementById('app')
         )
     </script>
