--- a/react/basic.html
+++ b/react/basic.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Component Lifecycle: Mounting</title>
-    <!--<script src="bower_components/react/react.min.js"></script>-->
-    <!--<script src="bower_components/react/JSXTransformer.js"></script>-->
-    <script src="http://fb.me/react-0.8.0.js"></script>
+    <title>React Playground</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <script src="http://fb.me/react-0.9.0.js"></script>
     <script src="http://fb.me/JSXTransformer-0.8.0.js"></script>
     <style>
-        body {
-            margin: 25px;
-        }
+        pre,textarea{height: 1000px !important;}
     </style>
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/jsx" src="PersonTable.js"></script>
+    <script type="text/jsx" src="jsx/Transformer.js"></script>
     <script type="text/jsx">
         /*** @jsx React.DOM */
         React.renderComponent(
-            <PersonTable />,
+            <Transformer />,
             document.getElementById('app')
         )
     </script>
