--- a/react/playground/basic.html
+++ b/react/playground/basic.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/jsx" src="jsx/Transformer.js"></script>
+    <script type="text/jsx" src="PersonTable.js"></script>
     <script type="text/jsx">
         /*** @jsx React.DOM */
         React.renderComponent(
-            <Transformer />,
+            <PersonTable />,
             document.getElementById('app')
         )
     </script>
