--- a/react/playground/basicWithAddons.html
+++ b/react/playground/basicWithAddons.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <title>React Playground</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <script src="http://fb.me/react-0.9.0.js"></script>
+    <script src="http://fb.me/react-with-addons-0.9.0.js"></script>
     <script src="http://fb.me/JSXTransformer-0.8.0.js"></script>
-    <style>
-        pre,textarea{height: 1000px !important;}
-    </style>
 </head>
 <body>
-    <div id="app"></div>
-    <script type="text/jsx" src="ReactLink.js"></script>
-    <script type="text/jsx">
+<div id="app"></div>
+<script type="text/jsx" src="ReactLink.js"></script>
+<script type="text/jsx">
         /*** @jsx React.DOM */
         React.renderComponent(
             <ReactLink />,
