wip. moving from home to work computer

--- a/react/playground/helloWorld.html
+++ b/react/playground/helloWorld.html
@@ -9,6 +9,6 @@
     <script src="http://fb.me/JSXTransformer-0.8.0.js"></script>
 </head>
 <body>
-<script type="text/jsx" src="childProperties.js" />
+<script type="text/jsx" src="jsx/childProperties.js" />
 </body>
 </html>
