--- a/react/playground/mounting.html
+++ b/react/playground/mounting.html
@@ -18,6 +18,6 @@
     <button onclick="unmount()">Unmount</button>
     <hr/>
     <div id="panel"></div>
-    <script type="text/jsx" src="mounting.jsx" />
+    <script type="text/jsx" src="jsx/mounting.jsx" />
 </body>
 </html>
