--- a/react/playground/basic.html
+++ b/react/playground/basic.html
@@ -6,17 +6,19 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script src="http://fb.me/react-0.9.0.js"></script>
     <script src="http://fb.me/JSXTransformer-0.8.0.js"></script>
+    <script type="text/javascript" src="/bower_components/reqwest/reqwest.js"></script>
+
     <style>
         pre,textarea{height: 1000px !important;}
     </style>
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/jsx" src="ReactLink.js"></script>
+    <script type="text/jsx" src="jsx/Integration.js"></script>
     <script type="text/jsx">
-        /*** @jsx React.DOM */
+        /** @jsx React.DOM */
         React.renderComponent(
-            <ReactLink />,
+            <Integration />,
             document.getElementById('app')
         )
     </script>
