--- a/react/playground/basicWithAddons.html
+++ b/react/playground/basicWithAddons.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <div id="app"></div>
-<script type="text/jsx" src="ReactLink.js"></script>
+<script type="text/jsx" src="jsx/ReactLink.js"></script>
 <script type="text/jsx">
-        /*** @jsx React.DOM */
+        /** @jsx React.DOM */
         React.renderComponent(
             <ReactLink />,
             document.getElementById('app')
